# cyberdog_mivins

./: .gitignore  README.md
mivins_core/: CMakeLists.txt
mivins_core/cmake_modules/: FindEigen3.cmake  FindGflags.cmake  FindGlog.cmake  Findyaml-cpp.cmake
mivins_core/mivins_api/: CMakeLists.txt  mivins_api.cpp  mivins_api.h
mivins_core/mivins_frontend/: CMakeLists.txt
mivins_core/mivins_frontend/mivins_base/src/: channel_frame_array.cpp  channel_frame_base.cpp  channel_frame_mono.cpp  channel_frame_rgbdfisheye.cpp  channel_frame_stereo.cpp  channel_imu.cpp  channel_odom.cpp  frontend_local_map.cpp  initialization.cpp  pose_optimizer.cpp  reprojector.cpp  stereo_triangulation.cpp  transformation_optimizer.cpp
mivins_core/mivins_frontend/mivins_camera_models/src/: camera_factory.cpp  camera_geometry_base.cpp  camera_yaml_serialization.cpp  equidistant_fisheye_geometry.cpp  equidistant_fisheye_projection.cpp  ncamera.cpp  ncamera_yaml_serialization.cpp  omni_geometry.cpp  omni_projection.cpp
mivins_core/mivins_frontend/mivins_cmake/: CMakeLists.txt
mivins_core/mivins_frontend/mivins_common/src/: frame.cpp  point.cpp
mivins_core/mivins_frontend/mivins_direct/src/: depth_estimation.cpp  depth_optimization.cpp  edgelet_detection_v2_gpu.cu  elder_zucker_utilities.cpp  fast_detection_gpu.cu  feature_detector.cpp  feature_detector_utilities.cpp  feature_patch_alignment.cpp  patch_affine_warp.cpp  patch_matcher.cpp
mivins_core/mivins_frontend/mivins_ekf_3dof/src/: device_accelerometer_sensor.cpp  device_gyroscope_sensor.cpp  gyroscope_bias_estimator.cpp  head_tracker.cpp  lowpass_filter.cpp  matrix_3x3.cpp  matrix_4x4.cpp  matrixutils.cpp  mean_filter.cpp  median_filter.cpp  neck_model.cpp  pose_prediction.cpp  rotation.cpp  sensor_event_producer.cpp  sensor_fusion_ekf.cpp  vectorutils.cpp
mivins_core/mivins_frontend/mivins_fast_corner/src/: fast_10.cpp  fast_10_score.cpp  fast_9.cpp  faster_corner_10_sse.cpp  faster_corner_9_neon.cpp  nonmax_3x3.cpp  nonmax_5x5.cpp
mivins_core/mivins_frontend/mivins_fast_corner/test/: test.cpp
mivins_core/mivins_frontend/mivins_img_align/src/: frame_gpu.cpp  sparse_img_align.cpp  sparse_img_align_base.cpp  sparse_img_align_device_utils.cu  sparse_img_align_gpu.cpp
mivins_core/mivins_frontend/mivins_minkindr/minkindr_python/: CMakeLists.txt
mivins_core/mivins_frontend/mivins_solver_base/src/: loss_function.cpp
mivins_core/mivins_frontend/mivins_tracker/src/: feature_tracker.cpp  feature_tracker_obs.cpp  feature_tracker_tools.cpp  feature_tracker_viz.cpp
mivins_core/mivins_frontend/mivins_utils/src/: cv_utils.cpp  geometry_utils.cpp  math_utils.cpp  path_utils.cpp  performance_monitor.cpp
mivins_core/mivins_interface/: CMakeLists.txt
mivins_core/mivins_interface/include/svo/: data_align.h  interpolation.h  loose_couple.h  param.h  pose_update.h  svo_factory.h  svo_interface.h  vins_backend_factory.h
mivins_core/mivins_interface/src/: data_align.cpp  interpolation.cpp  loose_couple.cpp  pose_update.cpp  svo_factory.cpp  svo_interface.cpp  vins_backend_factory.cpp
mivins_core/vins_backend/: CMakeLists.txt
mivins_core/vins_backend/include/: vins_backend_interface.h
mivins_core/vins_backend/include/common/: color_print.h  common_lib.h  global.h  global_mivins.h  parameters.h
mivins_core/vins_backend/include/estimator/: estimator.h  frame_manager.h  motion_detector.h  optimize_pose_mivins.h  outlier_rejection.h
mivins_core/vins_backend/include/factor/: diff_bundle_diff_cam_factor.h  diff_bundle_same_cam_factor.h  imu_factor.h  integration_base.h  integration_odom.h  marginalization_factor.h  odom_factor.h  odom_factor_s1d.h  odom_factor_s3d.h  pose_local_parameterization.h  same_bundle_diff_cam_factor.h  visual_base_factor.h
mivins_core/vins_backend/include/initial/: initial_alignment.h  initial_ex_rotation.h  initial_sfm.h  initializer.h  solve_5pts.h
mivins_core/vins_backend/src/: vins_backend_interface.cpp
mivins_core/vins_backend/src/common/: global_mivins.cpp  (+1 more)
mivins_ros1/src/: CMakeLists.txt  package.xml  rviz_config_vio.rviz
mivins_ros1/src/launch/: airsim_vio_triple_with_depth.launch  dog_d435i_vio_stereo.launch  dog_vio_stereo.launch  euroc_global_map_mono.launch  euroc_vio_mono.launch  euroc_vio_stereo.launch  indemind_vio_stereo.launch  live_nodelet.launch  mi_fisheye_stereo_frontend.launch  realsense_vio_rgbd.launch  realsense_vio_stereo.launch  realsense_vio_triple_with_depth.launch  realsense_vio_triple_with_stereo.launch  tum_vio_stereo.launch  visual_mapping.launch  visual_relocalization.launch
mivins_ros1/src/mivins_ros1/: output_helper.cpp  output_helper.h  svo_node.cpp  svo_node_base.cpp  svo_node_base.h  svo_process.cpp  svo_process.h  visualizer.cpp  visualizer.h
mivins_ros1/src/param/: airsim_vo_triple_with_depth.yaml  backend.yaml  davis.yaml  dog_d435i_vio_stereo.yaml  dog_vio_fisheye_stereo.yaml  dog_vio_stereo_realsense.yaml  dog_vo_stereo_fisheye.yaml  euroc_vio_mono.yaml  euroc_vio_stereo.yaml  euroc_vo_stereo.yaml  global_map.yaml  indemind_vio_stereo.yaml  mi_vo_fisheye_stereo.yaml  pinhole.yaml  realsense_vio_rgbd.yaml  realsense_vio_stereo.yaml  realsense_vio_triple_with_depth.yaml  realsense_vio_triple_with_stereo.yaml  realsense_vo_stereo.yaml  realsense_vo_triple_with_depth.yaml  realsense_vo_triple_with_stereo.yaml  tum_vio_stereo.yaml  tum_vo_stereo.yaml
mivins_ros2/src/: CMakeLists.txt  package.xml
mivins_ros2/src/cmake_modules/: FindEigen3.cmake  FindGflags.cmake  FindGlog.cmake
mivins_ros2/src/launch/: convert_calibration.py  dog_d430i_stereo.py  dog_d430i_stereo_odometry.py  dog_d430i_stereo_odometry_following.py  dog_d430i_stereo_odometry_localization.py  dog_d430i_stereo_odometry_mapping.py  mi_fisheye_stereo_frontend.py  mi_rgbd_fisheye_frontend.py  tum_fisheye_stereo_frontend.py
mivins_ros2/src/mivins_ros2/: mivins_lifecycle.cpp  mivins_lifecycle.h  mivins_lifecycle_node.cpp  mivins_node_base.cpp  mivins_node_base.h  mivins_process.cpp  mivins_process.h  visualizer.cpp  visualizer.h
mivins_ros2/src/rviz_config/: mivins_rviz2_config.rviz2.rviz
(+204 files in other folders)
