<?xml version="1.0"?>
<package>
  <name>svo_ros</name>
  <version>0.1.0</version>
  <description>
    Visual Odometry - ROS Nodes
  </description>

  <author>Christian Forster</author>
  <maintainer email="forster@ifi.uzh.ch">Christian Forster</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>pcl_ros</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>camera_models</run_depend>
  <run_depend>pcl_ros</run_depend>
  
</package>
