<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vins</name>
  <version>1.0.0</version>
  <description>
      MIVINS
  </description>
  <author email="pgeneva@udel.edu">Patrick Geneva</author>
  <author email="keck@udel.edu">Kevin Eckenhoff</author>
  <maintainer email="pgeneva@udel.edu">Patrick Geneva</maintainer>
  <license>GNU General Public License v3.0</license>
  
  <build_depend>cyberdog_common</build_depend>
  <exec_depend>cyberdog_common</exec_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>yaml-cpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>cyberdog_visions_interfaces</depend>
  <depend>protocol</depend>
  <depend>nav2_util</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


  
  <!-- <build_depend>image_transport</build_depend>
 
  <build_depend>pcl_ros</build_depend> -->

  
  
